--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,29 @@
+appdirs==1.4.4
 attrs==19.3.0
+black==19.10b0
+click==7.1.2
 dataclasses==0.7
+flake8==3.8.3
 importlib-metadata==1.7.0
+mccabe==0.6.1
 more-itertools==8.4.0
 mypy==0.782
 mypy-extensions==0.4.3
+numpy==1.19.0
 packaging==20.4
+pathspec==0.8.0
 pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.9.0
+pycodestyle==2.6.0
 pydantic==1.5.1
+pyflakes==2.2.0
 pyparsing==2.4.7
 pytest==5.4.3
+regex==2020.6.8
+scipy==1.5.0
 six==1.15.0
+toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
 wcwidth==0.2.5
